--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,16 +19,16 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: '1.21.1'
 
     - name: Build
-      run: go build -v ./...
+      run: cd backend && go build -v ./...
 
     - name: Install staticcheck
-      run: go install honnef.co/go/tools/cmd/staticcheck@latest
+      run: cd backend && go install honnef.co/go/tools/cmd/staticcheck@latest
 
     - name: Run staticcheck
-      run: staticcheck ./...
+      run: cd backend && staticcheck ./...
 
     - name: Test
-      run: go test -v ./...
+      run: cd backend && go test -v ./...
