--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.52.0",
     "vee-validate": "^4.12.8",
-    "vue": "^3.4.21",
+    "vue": "^3.4.27",
     "vue-router": "^4.3.0",
     "vuex": "^4.1.0",
     "yup": "^1.4.0"
