updates in frontend and backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "primevue": "^3.52.0",
     "vee-validate": "^4.12.8",
     "vue": "^3.4.27",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.3.0",
     "vuex": "^4.1.0",
     "yup": "^1.4.0"
